# learnopengl.com

./: CMakeLists.txt  \
include/: shader.hpp
shaders/: triangle.frag  triangle.vert
src/: main.cpp
